<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                        xmlns:tools="http://schemas.android.com/tools"
                                        xmlns:app="http://schemas.android.com/apk/res-auto"
                                        android:id="@+id/drawer_layout"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etTask"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:hint="@string/hint_task"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:lines="1"
                android:scrollHorizontally="true"
                android:layout_toLeftOf="@+id/btnAdd_AM"
                android:textColor="#ffffff" android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>
            <Button
                android:id="@+id/btnAdd_AM"
                android:text="@string/label_add"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/etTask"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@color/colorPrimaryDark"
                android:textColor="#ffffff"/>
            <Button
                android:id="@+id/btnShift_AM"
                android:text="@string/label_shift"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/colorPrimaryDark"
                android:textColor="#ffffff"
                android:visibility="gone"/>
            <Button
                android:id="@+id/btnRemove_AM"
                android:text="@string/label_remove"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/btnShift_AM"
                android:background="@color/colorPrimaryDark"
                android:textColor="#ffffff"
                android:visibility="gone"/>
            <Button
                android:id="@+id/btnCancel_AM"
                android:text="@string/label_cancel"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/btnRemove_AM"
                android:background="@color/colorPrimaryDark"
                android:textColor="#ffffff"
                android:visibility="gone"/>
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

        <TextView
            android:id="@+id/tvLabelDays_AM"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcTaskList"
            android:scrollbars="vertical"
            android:paddingBottom="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</LinearLayout>

    <fragment
        android:id="@+id/fragment_navigation_drawer"
        android:name="com.plugnplay.dailyplanner.FragmentDrawer"
        android:layout_width="@dimen/nav_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:layout="@layout/fragment_navigation_drawer"
        tools:layout="@layout/fragment_navigation_drawer" />

</android.support.v4.widget.DrawerLayout>