<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:layout_gravity="center_horizontal"
        android:id="@+id/tvTaskName_AP"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_gravity="center_horizontal"
        android:id="@+id/tvCommentName_AP"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:layout_gravity="center_horizontal"
        android:background="@android:drawable/ic_popup_reminder"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/snooze_hours_frame"
            android:orientation="vertical"
            android:layout_width="27dp"
            android:layout_height="44dp"
            android:layout_centerHorizontal="true"
            android:layout_toLeftOf="@+id/btnSnoozeHours_AP"
            android:layout_toStartOf="@+id/btnSnoozeHours_AP">
            <FrameLayout
                android:id="@+id/snooze_hours_plus"
                android:background="@drawable/selector_turquoise_without_right_wall"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp">
                <TextView
                    android:textSize="20sp"
                    android:text="@string/plus"
                    android:textColor="@drawable/selector_turquoise_white_color_text"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>
            <View
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <FrameLayout
                android:id="@+id/snooze_hours_minus"
                android:background="@drawable/selector_turquoise_without_left_wall"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp">
                <TextView
                    android:textSize="20sp"
                    android:text="@string/minus"
                    android:textColor="@drawable/selector_turquoise_white_color_text"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>
        </LinearLayout>
        <Button
            android:id="@+id/btnSnoozeHours_AP"
            android:text="@string/label_snooze_hours"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
        <EditText
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="24"
            android:gravity="center"
            android:background="@android:color/white"
            android:enabled="false"
            android:id="@+id/etHours_AP"
            android:text="@string/zero"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/snooze_hours_frame"
            android:layout_toStartOf="@+id/snooze_hours_frame"/>
    </RelativeLayout>
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/snooze_days_frame"
            android:orientation="vertical"
            android:layout_width="27dp"
            android:layout_height="44dp"
            android:layout_centerHorizontal="true"
            android:layout_toLeftOf="@+id/btnSnoozeMins_AP"
            android:layout_toStartOf="@+id/btnSnoozeMins_AP">
            <FrameLayout
                android:id="@+id/snooze_mins_plus"
                android:background="@drawable/selector_turquoise_without_right_wall"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp">
                <TextView
                    android:textSize="20sp"
                    android:text="@string/plus"
                    android:textColor="@drawable/selector_turquoise_white_color_text"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>
            <View
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <FrameLayout
                android:id="@+id/snooze_mins_minus"
                android:background="@drawable/selector_turquoise_without_left_wall"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp">
                <TextView
                    android:textSize="20sp"
                    android:text="@string/minus"
                    android:textColor="@drawable/selector_turquoise_white_color_text"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>
        </LinearLayout>
        <Button
            android:id="@+id/btnSnoozeMins_AP"
            android:text="@string/label_snooze_mins"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
        <EditText
            android:id="@+id/etMins_AP"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="24"
            android:gravity="center"
            android:background="@android:color/white"
            android:enabled="false"
            android:text="@string/zero"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/snooze_days_frame"
            android:layout_toStartOf="@+id/snooze_days_frame"/>
    </RelativeLayout>
    <Button
        android:id="@+id/btnDismiss_AP"
        android:text="@string/label_dismiss"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/btnSnoozeHours_AP"
        android:layout_toStartOf="@+id/btnSnoozeHours_AP" android:layout_gravity="right"/>

</LinearLayout>